--- a/.helm/values.yaml
+++ b/.helm/values.yaml
@@ -12,7 +12,8 @@ image:
 nameOverride: ""
 fullnameOverride: ""
 
-podAnnotations: {}
+podAnnotations: 
+  app: front
 
 service:
   type: ClusterIP
