--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.10.6",
+        "@emotion/styled": "^11.10.6",
         "@fronton/icons-react": "^0.2.2",
         "@reduxjs/toolkit": "^1.9.5",
-        "antd": "^5.4.3",
+        "antd": "^5.4.5",
+        "date-fns": "^2.29.3",
         "fronton-react": "^1.6.10",
+        "i18next": "^22.4.15",
+        "lodash": "^4.17.21",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-i18next": "^12.2.2",
         "react-redux": "^8.0.1",
         "react-router-dom": "^6.10.0"
     },
@@ -17,14 +23,13 @@
         "@testing-library/react": "^14.0.0",
         "@testing-library/user-event": "^14.1.1",
         "@types/jest": "^29.5.1",
-        "@types/node": "^18.15.11",
-        "@types/react": "^18.0.37",
+        "@types/node": "^18.16.0",
+        "@types/react": "^18.0.38",
         "@types/react-dom": "^18.0.2",
-        "eslint": "^8.38.0",
         "eslint-config-prettier": "^8.8.0",
         "husky": "^8.0.3",
         "lint-staged": "^13.2.1",
-        "prettier": "^2.8.7",
+        "prettier": "^2.8.8",
         "react-scripts": "5.0.1",
         "typescript": "^5.0.4",
         "web-vitals": "^3.3.1"
