--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dependencies": {
         "@fronton/icons-react": "^0.2.2",
         "@reduxjs/toolkit": "^1.9.5",
-        "antd": "^5.5.0",
+        "antd": "^5.5.1",
         "date-fns": "^2.30.0",
         "fronton-react": "^1.6.11",
         "i18next": "^22.5.0",
@@ -21,8 +21,8 @@
         "@testing-library/react": "^14.0.0",
         "@testing-library/user-event": "^14.1.1",
         "@types/jest": "^29.5.1",
-        "@types/node": "^20.2.1",
-        "@types/react": "^18.2.6",
+        "@types/node": "^20.2.3",
+        "@types/react": "^18.2.7",
         "@types/react-dom": "^18.2.4",
         "eslint-config-prettier": "^8.8.0",
         "husky": "^8.0.3",
@@ -33,6 +33,7 @@
         "web-vitals": "^3.3.1"
     },
     "scripts": {
+        "prepare": "husky install",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
