--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,48 +1,10 @@
 {
     "typescript.tsdk": "node_modules\\typescript\\lib",
     "css.lint.validProperties": ["composes"],
-
     "files.eol": "\n",
     "editor.tabSize": 4,
     "editor.linkedEditing": true,
-
-    "prettier.arrowParens": "avoid",
-    "prettier.bracketSameLine": false,
-    "prettier.bracketSpacing": false,
-    "prettier.endOfLine": "lf",
-    "prettier.jsxSingleQuote": false,
-    "prettier.printWidth": 120,
-    "prettier.proseWrap": "preserve",
-    "prettier.semi": true,
-    "prettier.singleQuote": true,
-    "prettier.tabWidth": 4,
-    "prettier.trailingComma": "es5",
-
-    "[jsonc]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[json]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[javascript]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[typescript]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[javascriptreact]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[typescriptreact]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[html]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[css]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "[scss]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    }
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "prettier.configPath": ".prettierrc"
 }
