--- a/package.json
+++ b/package.json
@@ -46,9 +46,8 @@
         }
     },
     "lint-staged": {
-        "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-            "prettier --write"
-        ]
+        "src/**/*.{js,jsx,ts,tsx}": "eslint --cache --fix",
+        "src/**/*.{js,jsx,ts,tsx,json,css,md}": "prettier --write"
     },
     "browserslist": {
         "production": [
