--- a/package.json
+++ b/package.json
@@ -38,7 +38,11 @@
             "react-app",
             "react-app/jest",
             "prettier"
-        ]
+        ],
+        "rules": {
+            "no-debugger": "warn",
+            "no-console": "warn"
+        }
     },
     "husky": {
         "hooks": {
