--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "react-router-dom": "^6.13.0"
     },
     "devDependencies": {
+        "@types/lodash": "^4.14.195",
         "@types/node": "^20.3.1",
         "@types/react": "^18.2.13",
         "@types/react-dom": "^18.2.6",
