--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
         ],
         "rules": {
             "no-debugger": "warn",
-            "no-console": "warn"
+            "no-console": "warn",
+            "no-unused-vars": "warn"
         }
     },
     "husky": {
