QCMS-174 Fix build

--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
         ],
         "rules": {
             "no-debugger": "warn",
-            "no-console": "warn",
-            "no-unused-vars": "warn"
+            "no-console": "warn"
         }
     },
     "husky": {
