--- a/package.json
+++ b/package.json
@@ -3,30 +3,30 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@fronton/icons-react": "^0.2.2",
-        "@reduxjs/toolkit": "^1.9.5",
-        "antd": "^5.6.3",
-        "date-fns": "^2.30.0",
-        "fronton-react": "^1.6.13",
-        "i18next": "^22.5.1",
-        "lodash": "^4.17.21",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-i18next": "^12.3.1",
-        "react-redux": "^8.1.1",
-        "react-router-dom": "^6.14.0"
+        "@fronton/icons-react": "0.2.2",
+        "@reduxjs/toolkit": "1.9.5",
+        "antd": "5.6.4",
+        "date-fns": "2.30.0",
+        "fronton-react": "1.6.14",
+        "i18next": "22.5.1",
+        "lodash": "4.17.21",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-i18next": "12.3.1",
+        "react-redux": "8.1.1",
+        "react-router-dom": "6.14.1"
     },
     "devDependencies": {
-        "@types/lodash": "^4.14.195",
-        "@types/node": "^20.3.2",
-        "@types/react": "^18.2.14",
-        "@types/react-dom": "^18.2.6",
-        "eslint-config-prettier": "^8.8.0",
-        "husky": "^8.0.3",
-        "lint-staged": "^13.2.3",
-        "prettier": "^2.8.8",
+        "@types/lodash": "4.14.195",
+        "@types/node": "20.4.1",
+        "@types/react": "18.2.14",
+        "@types/react-dom": "18.2.6",
+        "eslint-config-prettier": "8.8.0",
+        "husky": "8.0.3",
+        "lint-staged": "13.2.3",
+        "prettier": "3.0.0",
         "react-scripts": "5.0.1",
-        "typescript": "^5.1.6"
+        "typescript": "5.1.6"
     },
     "scripts": {
         "prepare": "husky install",
