--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "target": "ES2015",
         "lib": ["dom", "dom.iterable", "esnext"],
+        "baseUrl": "src",
         "allowJs": true,
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
