--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@reduxjs/toolkit": "1.9.5",
         "antd": "5.6.4",
         "date-fns": "2.30.0",
+        "date-fns-tz": "2.0.0",
         "fronton-react": "1.6.14",
         "i18next": "22.5.1",
         "lodash": "4.17.21",
